     current resource's capacity and number of activities running on it,
	 returns the new capacity.
   - Note that this callback is in the critical path of the system solve and
   should not take long to execute.
   - Examples:
     - Disk: examples/cpp/io-degradation
	 - Link: examples/cpp/network-nonlinear
	 - CPU: examples/cpp/exec-cpu-nonlinear

S4U:
 - New: s4u::Disk::set_sharing_policy() and s4u::Host::set_sharing_policy().
   Allows the configuration of non-linear resource sharing for hosts and
   disks.

Documentation:
  * New section "Release Notes" documenting recent and current developments.

----------------------------------------------------------------------------

SimGrid (3.28) July 14. 2021

The Victoriadagarna Release.

New features:
 - C++ platform interface: Users can now describe their platform directly in C++.
   This provides greatly flexibility and performance improvement for complex
   platforms. Main features:
     - Fat-Tree/DragonFly/Torus composing: allows you to create clusters of
       "zones", instead of single hosts. This feature enables the description
       of clusters with complex hosts, composed of several CPUs, GPUs, etc.
     - StarZone: new zone with a Star-like topology. The routes are defined
       as a set of links used to communicate from node to everybody (node<->ALL).
     - Split-Duplex links: auxiliary method to create split-duplex links in
       the platform, easing its utilisation. It automatically creates both UP
       and DOWN links (similarly as done in XML).
     - Please refer to the documentation and the examples included:
       e.g. examples/cpp/clusters-multicpu/ and examples/platforms/*.cpp.
 - New plugin: Producer-Consumer with monitor. Just requires to include the
   include/simgrid/plugins/ProducerConsumer.hpp header to be used. See the
   associated example (examples/cpp/plugin-prodcons).

S4U:
 - New: s4u::Comm::wait_all_for() (like s4u::Comm::wait_all, but with a timeout),